metadata/force-app/main/default/objects/Case/fields/Annual_Amount_Paid_to_Bynder__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_Paid_to_Bynder__c</fullName>
    <description>BODEV_81: Annual amount paid from Customer to Bynder</description>
    <inlineHelpText>Depending on SFMC Commission type, this field represents either the total ARR for the customer or annual Sales Price of the Connector.</inlineHelpText>
    <label>Annual Amount Paid to Bynder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>