metadata/force-app/main/default/objects/Case/fields/bizible2__Ad_Campaign_Name_FT__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
    <label>Ad Campaign Name (FT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>