metadata/force-app/main/default/objects/Case/fields/bizible2__Landing_Page_LC__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Landing_Page_LC__c</fullName>
    <label>Landing Page (LC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>