metadata/force-app/main/default/objects/Case/fields/bizible2__Touchpoint_Date_LC__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
    <description>The date that the session activity occurred</description>
    <inlineHelpText>The date that the session activity occurred</inlineHelpText>
    <label>Touchpoint Date (LC)</label>
    <type>DateTime</type>
</CustomField>