metadata/force-app/main/default/objects/Case/fields/bizible2__Touchpoint_Source_FT__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
    <description>The name of the referrer</description>
    <inlineHelpText>The name of the referrer</inlineHelpText>
    <label>Touchpoint Source (FT)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>