metadata/force-app/main/default/objects/Case/fields/Case_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_URL__c</fullName>
    <description>BODEV-327: SFMC Partnership</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case URL</label>
    <type>Text</type>
</CustomField>