metadata/force-app/main/default/objects/Case/fields/CRMGAC__Total_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Total_Event_Duration__c</fullName>
    <label>Total Event Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>