metadata/force-app/main/default/objects/Case/fields/CRMGAC__Total_Past_Due_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Total_Past_Due_Tasks__c</fullName>
    <label>Total Past Due Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>