metadata/force-app/main/default/objects/Case/fields/DEL_SFMC_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>DEL_SFMC_Order_Type__c</fullName>
    <description>BODEV-81: Identify type of order depending on Opportunity information.</description>
    <formula>/*
  7 business scenarios where we need to submit orders to Salesforce.

  1. New customer purchases SFMC Connector
  2. Existing Bynder customer purchases SFMC Connector as upsell
  3. Existing customer using SFMC connector stops using SFMC Connector
  4. Existing customer using SFMC connector to which we owe 20% ARR makes upsell/downsell
  5. Customer churns
  6. Existing customer using SFMC connector to which we owe 20% ARR renews with changed ARR
  7. Existing customer using SFMC connector to which we owe 20% Connector renews with changed Connector Sales Price

*/

IF(
  CONTAINS(TEXT(Opportunity__r.Type), &quot;New Business&quot;),
  /* Scenario 1 */
  &quot;New Order - New Business incl. SFMC Connector&quot;,
  IF(
    CONTAINS(TEXT(Opportunity__r.Type), &quot;Upsell&quot;),
    IF(
      Opportunity__r.of_SFMC_Connector__c &gt; 0,
      /* Scenario 2 */
      &quot;New Order - Upsell SFMC Connector&quot;,
      IF(
        Opportunity__r.of_SFMC_Connector__c &lt; 0,
        /* Scenario 3 */
        &quot;Termination - Downsell SFMC Connector&quot;,
        /* Scenario 4 */
        &quot;Order update - Adjust 20% ARR&quot;
      )
    ),
    IF(
      ISPICKVAL(Opportunity__r.StageName, &quot;Closed Lost&quot;),
      /* Scenario 5 */
      &quot;Termination - Churn&quot;,
      IF(
        CONTAINS(TEXT(Opportunity__r.Type), &quot;Renewal&quot;),
        IF(
          ISPICKVAL(Account.SFMC_Commission__c, &quot;20% of ARR&quot;),
          /* Scenario 6 */
          &quot;Order update - Adjust 20% ARR&quot;,
          /* Scenario 7 */
          &quot;Order update - Adjust 20% Connector&quot;
        ),
        &quot;UNDEFINED&quot;
      )
    )
  )
)</formula>
    <label>[DEL] Order Type</label>
    <type>Text</type>
</CustomField>