metadata/force-app/main/default/objects/Case/fields/Hours_after_Creation__c.field-meta.xml
<CustomField>
    <fullName>Hours_after_Creation__c</fullName>
    <description>BODEV-81: Hours past after creation until now (open cases) or closure (closed cases)</description>
    <formula>/*
  If Open, return hours past since creation
  If Closed, return hours past until closure
*/

(IF(IsClosed, ClosedDate, NOW()) - CreatedDate) * 24</formula>
    <inlineHelpText>Open cases: hours past since creation until now. Closed cases: hours past since creation until closure.</inlineHelpText>
    <label>Hours after Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>