metadata/force-app/main/default/objects/Case/fields/Is_SF_added_as_other_partner__c.field-meta.xml
<CustomField>
    <fullName>Is_SF_added_as_other_partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether salesforce is added as a other partner on opportunity.</description>
    <label>Is SF added as other partner?</label>
    <type>Checkbox</type>
</CustomField>