metadata/force-app/main/default/objects/Case/fields/Marketing_Cloud_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Org_ID__c</fullName>
    <description>BODEV-166: Customer&apos;s Marketing Cloud Org ID, required for submitting orders to Salesforce.</description>
    <formula>Account.Marketing_Cloud_Org_ID__c</formula>
    <label>Marketing Cloud Org ID</label>
    <type>Text</type>
</CustomField>