metadata/force-app/main/default/objects/Case/fields/Monthly_Amount_Paid_to_Bynder__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount_Paid_to_Bynder__c</fullName>
    <description>BODEV-81: Monthly amount paid by Customer to Bynder</description>
    <inlineHelpText>Depending on SFMC Commission type, this field represents either the total MRR for the customer or monthly Sales Price of the Connector.</inlineHelpText>
    <label>Monthly Amount Paid to Bynder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>