metadata/force-app/main/default/objects/Case/fields/Opportunity_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ARR__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>IF(ISBLANK(Opportunity__c), NULL,
    Opportunity__r.ARR_manual__c)</formula>
    <label>Opportunity ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>