metadata/force-app/main/default/objects/Case/fields/Opportunity_MRR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_MRR__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>IF(ISBLANK(Opportunity__c), NULL,
  IF(
    AND(
      ISPICKVAL(Opportunity__r.StageName,&quot;Closed Won&quot;),
      Opportunity__r.HasOpportunityLineItem = TRUE
    ),
    Opportunity__r.MRR_from_Products__c,
    Opportunity__r.MRR__c
  )
)</formula>
    <label>Opportunity MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>