metadata/force-app/main/default/objects/Case/fields/SFMC_Commission__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Commission__c</fullName>
    <description>BODEV-81: indicates whether Bynder owes higher or lower commission.</description>
    <formula>/*
If Bynder already owes commission (= SFMC Commission field on Account is not blank), user the value on Account.
For new orders, Bynder owes 20% of ARR for New Business, and 20% of Connector when Connector is sold as Upsell.
*/

IF(
NOT(ISBLANK(TEXT(Account.SFMC_Commission__c))),
TEXT(Account.SFMC_Commission__c),
IF(
OR(
SFMC_Is_from_Salesforce_Lead__c,
SFMC_Is_influenced_by_Salesforce__c,
Opportunity__r.of_SFMC_Connector__c &gt; 0
),
IF(
AND(CONTAINS(TEXT(Opportunity__r.Type), &quot;New Business&quot;),Opportunity__r.of_SFMC_Connector__c &gt; 0),
&quot;20% of ARR&quot;,
IF(AND(ISPICKVAL(Opportunity__r.Type, &quot;Existing Business-Upsell&quot;),Opportunity__r.of_SFMC_Connector__c &gt; 0),
&quot;20% of Connector&quot;,&apos;&apos;)),&apos;&apos;
))</formula>
    <inlineHelpText>Whether Bynder owes 20% of ARR or of only Connector.</inlineHelpText>
    <label>SFMC Commission</label>
    <type>Text</type>
</CustomField>