metadata/force-app/main/default/objects/Case/fields/SFMC_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Contract_Start_Date__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>IF(OR(ISBLANK( Opportunity__c ), ISBLANK( Opportunity__r.Startdate_contract__c )), NULL,
  Opportunity__r.Startdate_contract__c
)</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>