metadata/force-app/main/default/objects/Case/fields/SFMC_Customer_Address_City__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Customer_Address_City__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>Account.BillingStreet &amp; &quot;, &quot; &amp;  Account.BillingCity</formula>
    <label>Customer Address &amp; City</label>
    <type>Text</type>
</CustomField>