metadata/force-app/main/default/objects/Case/fields/SFMC_Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Customer_Country__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>Account.BillingCountry</formula>
    <label>Customer Country</label>
    <type>Text</type>
</CustomField>