metadata/force-app/main/default/objects/Case/fields/SFMC_Customer_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Customer_Order_Date__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Customer Order Date</label>
    <type>Date</type>
</CustomField>