metadata/force-app/main/default/objects/Case/fields/SFMC_Is_One_Time_Pilot__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Is_One_Time_Pilot__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <label>Is One Time Pilot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>