metadata/force-app/main/default/objects/Case/fields/SFMC_Monthly_Amount_Owed_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Monthly_Amount_Owed_to_Partner__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <label>Monthly Amount Owed to Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>