metadata/force-app/main/default/objects/Case/fields/SFMC_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Order_Quantity__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>IF(Opportunity__r.of_SFMC_Connector__c = 0, 1, Opportunity__r.of_SFMC_Connector__c)</formula>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>