metadata/force-app/main/default/objects/Case/fields/SFMC_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Order_Type__c</fullName>
    <description>BODEV-178: Text field to capture Order Type. In the initial build in BODEV-81 it was formula field, but changed.</description>
    <label>Order Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>