metadata/force-app/main/default/objects/Case/fields/SFMC_Other_Partner__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Other_Partner__c</fullName>
    <description>BODEV-178: Text field to capture Partner Accounts&apos; name under the Oppty other than Salesforce.</description>
    <label>Other Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>