metadata/force-app/main/default/objects/Case/fields/SFMC_Partner_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Partner_Application_Name__c</fullName>
    <description>BODEV-81: SFMC Connector Order</description>
    <formula>&quot;Bynder Digital Asset Management (DAM) for Salesforce Marketing Cloud&quot;</formula>
    <label>Partner Application Name</label>
    <type>Text</type>
</CustomField>