metadata/force-app/main/default/objects/Case/fields/UniqueEntry__RingLead_Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>