metadata/force-app/main/default/objects/Case/recordTypes/SFMC_Connector_Order.recordType-meta.xml
<RecordType>
    <fullName>SFMC_Connector_Order</fullName>
    <active>true</active>
    <businessProcess>SFMC Connector Order</businessProcess>
    <description>BODEV-81: Record Type for SFMC Connector Order Cases</description>
    <label>SFMC Connector Order</label>
</RecordType>